--- a/index.html
+++ b/index.html
@@ -166,6 +166,12 @@
                     <div class="silver">
                         <img class="cat-icon" src="./images/silver-medal.svg"/>
                         <h2>Silver Sponsors</h2>
+			<div class="sponsor-icons">
+                            <a href="//majestic.com/"><img id="majestic" src="./images/sponsors/majestic.png"/></a>
+                        </div>
+			<div class="sponsor-icons">
+                            <a href="//capgemini.com/"><img id="cap" src="./images/sponsors/cap.png"/></a>
+                        </div>
                     </div>
            <div class="bronze">
                 <img class="cat-icon" src="./images/bronze-medal.svg"/>
@@ -173,11 +179,20 @@
 		<div class="sponsor-icons">
                     <a href="//cssbham.com"><img src="./images/sponsors/css.png"/></a>
                 </div>
+		<div class="sponsor-icons">
+                     <a href="//kainos.com/"><img id="kainos" src="./images/sponsors/kainos.png"/></a>
+                </div>
           </div>
 			
             <div class="partner">
                         <img class="cat-icon" src="./images/deal.svg"/>
                         <h2>Partners</h2>
+		    	<div class="sponsor-icons">
+                            <a href="//cs.bham.ac.uk/"><img id="socs" src="./images/sponsors/socs.png"/></a>
+                        </div>
+		        <div class="sponsor-icons">
+                            <a href="//mlh.io/"><img id="mlh" src="./images/sponsors/mlh.png"/></a>
+                        </div>
                     </div>
                 </div>
                 <a href="sponsorship.pdf"><button>Become A Sponsor!</button></a>
