Job title update

--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
                         <div class="team-member__text">
                             <div class="team-member__text__content">
                                 <h3>Liam Sorta</h3>
-                                <h5>Founder, Game Dev Network</h5>
+                                <h5>Technical Evangelist @ Unity Technologies</h5>
                             </div>
                         </div>
                     </div>
