Added new images to homepage

--- a/index.html
+++ b/index.html
@@ -172,10 +172,22 @@
 			<div class="sponsor-icons">
                             <a href="//capgemini.com/"><img id="cap" src="./images/sponsors/cap.png"/></a>
                         </div>
+			<div class="sponsor-icons">
+                            <a href="//bt.co.uk/"><img id="bt" src="./images/sponsors/bt.png"/></a>
+                        </div>
+			<div class="sponsor-icons">
+                            <a href="//github.com/"><img id="github" src="./images/sponsors/github-logo.svg"/></a>
+                        </div>
+			<div class="sponsor-icons">
+                            <a href="//robertwalters.co.uk/"><img id="cap" src="./images/sponsors/robert-walters.png"/></a>
+                        </div>
                     </div>
            <div class="bronze">
                 <img class="cat-icon" src="./images/bronze-medal.svg"/>
                 <h2>Bronze Sponsors</h2>
+	        <div class="sponsor-icons">
+                     <a href="//bentleymotors.co.uk/"><img id="bentley" src="./images/sponsors/bentley.jpg"/></a>
+                </div>
 		<div class="sponsor-icons">
                     <a href="//cssbham.com"><img src="./images/sponsors/css.png"/></a>
                 </div>
