--- a/index.html
+++ b/index.html
@@ -179,14 +179,14 @@
                             <a href="//github.com/"><img id="github" src="./images/sponsors/github-logo.svg"/></a>
                         </div>
 			<div class="sponsor-icons">
-                            <a href="//robertwalters.co.uk/"><img id="cap" src="./images/sponsors/robert-walters.png"/></a>
+                            <a href="//robertwalters.co.uk/"><img id="cap" src="./images/sponsors/robert-walters.jpg"/></a>
                         </div>
                     </div>
            <div class="bronze">
                 <img class="cat-icon" src="./images/bronze-medal.svg"/>
                 <h2>Bronze Sponsors</h2>
 	        <div class="sponsor-icons">
-                     <a href="//bentleymotors.co.uk/"><img id="bentley" src="./images/sponsors/bentley.jpg"/></a>
+                     <a href="//bentleymotors.co.uk/"><img id="bentley" src="./images/sponsors/bentley.png"/></a>
                 </div>
 		<div class="sponsor-icons">
                     <a href="//cssbham.com"><img src="./images/sponsors/css.png"/></a>
