--- a/index.html
+++ b/index.html
@@ -176,6 +176,9 @@
                             <a href="//bt.co.uk/"><img id="bt" src="./images/sponsors/bt.png"/></a>
                         </div>
 			<div class="sponsor-icons">
+                            <a href="//unity.com/"><img id="unity" src="./images/sponsors/unity.png"/></a>
+                        </div>
+			<div class="sponsor-icons">
                             <a href="//github.com/"><img id="github" src="./images/sponsors/github-logo.svg"/></a>
                         </div>
 			<div class="sponsor-icons">
