--- a/index.html
+++ b/index.html
@@ -207,6 +207,9 @@
                         </div>
 		        <div class="sponsor-icons">
                             <a href="//mlh.io/"><img id="mlh" src="./images/sponsors/mlh.png"/></a>
+		    </div>
+		    		        <div class="sponsor-icons">
+                            <a href="http://hackp.ac/mlh-stickermule-hackathons"><img id="stickermule" src="./images/sponsors/stickermule.svg"/></a>
                         </div>
                     </div>
                 </div>
