added unidays & nexmo

--- a/index.html
+++ b/index.html
@@ -184,6 +184,9 @@
 			<div class="sponsor-icons">
                             <a href="//robertwalters.co.uk/"><img id="cap" src="./images/sponsors/robert-walters.jpg"/></a>
                         </div>
+         		<div class="sponsor-icons">
+                            <a href="//nexmo.com/"><img id="cap" src="./images/sponsors/nexmo.png"/></a>
+                        </div>
                     </div>
            <div class="bronze">
                 <img class="cat-icon" src="./images/bronze-medal.svg"/>
@@ -210,6 +213,9 @@
 		    </div>
 		    		        <div class="sponsor-icons">
                             <a href="http://hackp.ac/mlh-stickermule-hackathons"><img id="stickermule" src="./images/sponsors/stickermule.svg"/></a>
+                        </div>
+		        <div class="sponsor-icons">
+                            <a href="//unidays.co.uk"><img id="stickermule" src="./images/sponsors/stickermule.svg"/></a>
                         </div>
                     </div>
                 </div>
