--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
                             <a href="http://hackp.ac/mlh-stickermule-hackathons"><img id="stickermule" src="./images/sponsors/stickermule.svg"/></a>
                         </div>
 		        <div class="sponsor-icons">
-                            <a href="//unidays.co.uk"><img id="stickermule" src="./images/sponsors/stickermule.svg"/></a>
+                            <a href="//myunidays.com"><img id="unidays" src="./images/sponsors/unidays.png"/></a>
                         </div>
                     </div>
                 </div>
