--- a/index.html
+++ b/index.html
@@ -38,9 +38,8 @@
             <a href="#event-info">About Us</a>
             <a href="#sponsors">Sponsors</a>
             <a href="#team">Team</a>
-            <a href="http://info.hackthemidlands.com">Event Info</a>
             <a href="https://www.eventbrite.co.uk/e/hackthemidlands-30-tickets-47296240328">Get Tickets</a>
-            <!--<a href="event-info.html">Event Information</a>-->
+            <a href="event-info.html">Event Information</a>
         </div>
       </div>
 
@@ -63,9 +62,8 @@
                             <a href="#event-info">About Us</a>
                             <a href="#sponsors">Sponsors</a>
                             <a href="#team">Team</a>
-                            <a href="http://info.hackthemidlands.com">Event Info</a>
                             <a href="https://www.eventbrite.co.uk/e/hackthemidlands-30-tickets-47296240328">Get Tickets</a>
-                            <!--<a href="event-info.html">Event Information</a>-->
+                            <a href="event-info.html">Event Information</a>
                             <div class="nav-mobile"></div>
                         </div>
                     </div>
