--- a/index.html
+++ b/index.html
@@ -201,6 +201,10 @@
                      <a href="//kainos.com/"><img id="kainos" src="./images/sponsors/kainos.png"/></a>
                 </div>
           </div>
+          <div class="sponsor-icons">
+                     <a href="//lloydsbank.com/"><img id="lloyds" src="./images/sponsors/lloyds.png"/></a>
+                </div>
+          </div>
 			
             <div class="partner">
                         <img class="cat-icon" src="./images/deal.svg"/>
