--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
                         <div class="team-member__text">
                             <div class="team-member__text__content">
                                 <h3>Cat Dunicliff</h3>
-                                <h5>Child Protection Officer</h5>
+                                <h5>Safeguarding Officer</h5>
                             </div>
                         </div>
                     </div>
