--- a/event-info.html
+++ b/event-info.html
@@ -137,7 +137,7 @@
             <h2>Submissions</h2>
             <hr/>
             <a href="http://hackthemidlands3.devpost.com/"><img src="http://devpost2.assetspost.com/assets/reimagine2/devpost-logo-646bdf6ac6663230947a952f8d354cad.svg" alt="devpost"/></a>
-            <h3>All submissions can be uploaded to <a href="http://hackthemidlands.devpost.com/">Devpost</a> where we
+            <h3>All submissions can be uploaded to <a href="http://hackthemidlands3.devpost.com/">Devpost</a> where we
                 shall judge them and award winnders. If you have not already signed up to <strong>Devpost</strong> then
                 make sure you do it <strong>NOW!</strong></h3>
             <h1>NOW GO HACK AND HAVE FUN!</h1>
