--- a/event-info.html
+++ b/event-info.html
@@ -54,8 +54,6 @@
         <div class="header-title">
             <h1>Event information</h1>
             <h4>Hackthemidlands</h4>
-            <a href="#navigation"><button class="button-white">Browse</button></a>
-            <a href="#spotify" data-featherlight="#spotify"><button class="button-white">Spotify URI</button></a>
         </div>
     </section>
 
@@ -84,7 +82,7 @@
     </section>
 
     <!--Sponsor Challenges-->
-    <!-- 
+     
     <section id="sponsor-challenges">
         <div class="container">
             <h2>Sponsor Challenges</h2>
@@ -97,29 +95,85 @@
                     <div class="sponsor-item-right">
                         <div class="sponsor-item-right-content">
                             <h3>Majestic Challenge</h3>
-                            <p>Most creative use of - Mash it up, Visualise it, Have fun with it!</p>
+                            <p>"I laughed out loud" (in a safe manner)</p>
                             <br>
-                            <p>Get the API key from our desk!</p>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="sponsor-item" id="majestic">
                 <div class="sponsor-item-left">
-                    <img src="images/sponsors/millenium-point.svg" alt="Millenium Point"/>
+                    <img src="images/sponsors/nexmo.png" alt="Nexmo"/>
                 </div>
                 <div class="sponsor-item-right">
                     <div class="sponsor-item-right-content">
-                        <h3>Millenium Point Data Challenge</h3>
-                        <p>Use data showing the number of people passing through our building and display and provide insightful information!</p>
-                        <a href="#" id="mp-lightbox" data-featherlight="#mp-challenge">View Specific Challenge Breif</a>
-                        <br>
-                        <a href="MPdata.xlsx"><button class="button-black">Download </button></a>
+                        <h3></h3>
+                        <p>Best use of Nexmo APIs</p>
+                    </div>
+                </div>
+            </div>
+            <div class="sponsor-item" id="majestic">
+                <div class="sponsor-item-left">
+                    <img src="images/sponsors/capgemini.png" alt="Capgemini"/>
+                </div>
+                <div class="sponsor-item-right">
+                    <div class="sponsor-item-right-content">
+                        <h3></h3>
+                        <p>Best use of AI technology</p>
+                    </div>
+                </div>
+            </div>
+            <div class="sponsor-item" id="majestic">
+                <div class="sponsor-item-left">
+                    <img src="images/sponsors/unity.png" alt="Unity"/>
+                </div>
+                <div class="sponsor-item-right">
+                    <div class="sponsor-item-right-content">
+                        <h3></h3>
+                        <p>Build something cool with Unity</p>
+                    </div>
+                </div>
+            </div>
+            <div class="sponsor-item" id="majestic">
+                <div class="sponsor-item-left">
+                    <img src="images/sponsors/robert-walters.png" alt="robert-walters"/>
+                </div>
+                <div class="sponsor-item-right">
+                    <div class="sponsor-item-right-content">
+                        <h3></h3>
+                        <p>Best hack to make buisiness run smoothly</p>
+                    </div>
+                </div>
+            </div>
+            <div class="sponsor-item" id="majestic">
+                <div class="sponsor-item-left">
+                    <img src="images/sponsors/bcs.png" alt="bcs"/>
+                </div>
+                <div class="sponsor-item-right">
+                    <div class="sponsor-item-right-content">
+                        <h3></h3>
+                        <p>Hack that does the most good for society</p>
                     </div>
                 </div>
             </div>
         </div>
-    </section>-->
+    </section>
+
+    <style>
+    table {
+        font-family: ingra, sans-serif;
+        color: #dddddd;
+        border-collapse: collapse;
+        width: 100%;
+    }
+
+    td, th {
+        border: 1px solid #dddddd;
+        text-align: left;
+        padding: 8px;
+    }
+
+    </style>
 
     <section id="schedule">
         <div class="container">
@@ -127,8 +181,78 @@
             <hr/>
             <h3>Saturday</h3>
             <div class="timetable" id="timetable"></div>
+            <table>
+                <col width="300">
+                <tr>
+                    <th>Time</th>
+                    <th></th>
+                </tr>
+                <tr>
+                    <td>10:00</td>
+                    <td>Doors Open</td>
+                </tr>
+                <tr>
+                    <td>11:00</td>
+                    <td>Opening Presentation</td>
+                </tr>
+                <tr>
+                    <td>12:00</td>
+                    <td>Hacking Starts</td>
+                </tr>
+                <tr>
+                    <td>13:00</td>
+                    <td>Lunch</td>
+                </tr>
+                <tr>
+                    <td>14:00 to 18:00</td>
+                    <td>Workshops</td>
+                </tr>
+                <tr>
+                    <td>19:00</td>
+                    <td>Dinner</td>
+                </tr>
+                <tr>
+                    <td>20:00</td>
+                    <td>Code in the Dark</td>
+                </tr>
+                <tr>
+                    <td>22:00</td>
+                    <td>Werewolf</td>
+                </tr>
+            </table>
             <h3>Sunday</h3>
             <div class="timetable" id="timetable2"></div>
+            <table>
+                <col width="300">
+                <tr>
+                    <th>Time</th>
+                    <th></th>
+                </tr>
+                <tr>
+                    <td>00:00</td>
+                    <td>Midnight Snack</td>
+                </tr>
+                <tr>
+                    <td>08:00</td>
+                    <td>Breakfast</td>
+                </tr>
+                <tr>
+                    <td>12:00</td>
+                    <td>Hacking Ends</td>
+                </tr>
+                <tr>
+                    <td>13:00</td>
+                    <td>Lunch</td>
+                </tr>
+                <tr>
+                    <td>14:00</td>
+                    <td>Final Presentations</td>
+                </tr>
+                <tr>
+                    <td>16:00</td>
+                    <td>Closing Ceremony</td>
+                </tr>
+            </table>
         </div>
     </section>
 
@@ -161,7 +285,7 @@
         });
     </script>
 
-    <script>
+<!--     <script>
         $(document).ready(function(){
             // Timetable
             var timetable = new Timetable();
@@ -201,7 +325,7 @@
             var renderer2 = new Timetable.Renderer(timetable2);
             renderer2.draw('#timetable2'); // any css selector
         });
-    </script>
+    </script> -->
 
     <script>
         $('.nav-mobile').on('click', function(){
@@ -252,6 +376,212 @@
 
     <script>
         $('#mp-lightbox').featherlight();
+    </script>
+    <style type="text/css">
+        .master--no-content[_ngcontent-c0] img[_ngcontent-c0]{
+    width:60px;
+    height:60px;
+    -webkit-animation:pointerShake 4s infinite;
+    animation:pointerShake 4s infinite;
+    -webkit-animation-delay:2s;
+    animation-delay:2s
+}
+.master--no-content[_ngcontent-c0] h3[_ngcontent-c0]{
+    font-weight:500;
+    font-size:2rem;
+    letter-spacing:1px;
+    text-transform:capitalize;
+    width:60%;
+    margin:auto
+}
+.discord[_ngcontent-c0]{
+    position:fixed;
+    right:2%;
+    bottom:2%;
+    background-color:#7289da;
+    width:80px;
+    height:80px;
+    border-radius:50%;
+    cursor:pointer;
+    opacity:0;
+    -webkit-animation:circleAnimate .4s ease 2s forwards;
+    animation:circleAnimate .4s ease 2s forwards;
+    z-index:999999999
+}
+.discord--box[_ngcontent-c0]{
+    width:350px;
+    height:500px;
+    position:fixed;
+    right:80px;
+    bottom:80px;
+    z-index:10000;
+    -webkit-transform-origin:bottom right;
+    transform-origin:bottom right;
+    transition:discordTransform 1s ease
+}
+@media screen and (max-width:530px){
+    .discord--box[_ngcontent-c0]{
+        right:0;
+        bottom:100px
+    }
+}
+@media screen and (max-width:366px){
+    .discord--box[_ngcontent-c0] iframe[_ngcontent-c0]{
+        width:260px;
+        float:right
+    }
+}
+.discord--cross[_ngcontent-c0], .discord--icon[_ngcontent-c0]{
+    width:60%;
+    height:60%;
+    position:absolute;
+    left:50%;
+    top:50%;
+    -webkit-transform:translate(-50%,-50%);
+    transform:translate(-50%,-50%)
+}
+.discord--cross[_ngcontent-c0] div[_ngcontent-c0], .discord--icon[_ngcontent-c0] div[_ngcontent-c0]{
+    width:100%;
+    height:100%
+}
+.discord--icon[_ngcontent-c0]{
+    -webkit-animation:iconAnimateIn .3s ease;
+    animation:iconAnimateIn .3s ease
+}
+.discord--icon__logo[_ngcontent-c0]{
+    background-image:url(https://www.vectorlogo.zone/logos/discordapp/discordapp-tile.svg);
+    background-size:cover;
+    background-position:50%;
+    background-repeat:no-repeat
+}
+.discord--icon.open[_ngcontent-c0]{
+    -webkit-transform:translate(-50%,-50%) scale(0);
+    transform:translate(-50%,-50%) scale(0);
+    -webkit-animation:iconAnimateOut .3s ease;
+    animation:iconAnimateOut .3s ease
+}
+.discord--cross[_ngcontent-c0]{
+    -webkit-animation:crossAnimateIn .3s ease;
+    animation:crossAnimateIn .3s ease;
+    width:40%;
+    height:40%
+}
+.discord--cross__icon[_ngcontent-c0]{
+    background-image:url(http://www.rosas.center/fileadmin/templates/IS/image/close.png);
+    background-size:cover;
+    background-position:50%;
+    background-repeat:no-repeat
+}
+.discord--cross.closed[_ngcontent-c0]{
+    -webkit-transform:translate(-50%,-50%) scale(0);
+    transform:translate(-50%,-50%) scale(0);
+    -webkit-animation:iconAnimateOut .3s ease;
+    animation:iconAnimateOut .3s ease
+}
+@-webkit-keyframes circleAnimate{
+    0%{
+        -webkit-transform:scale(0);
+        transform:scale(0);
+        opacity:0
+    }
+    to{
+        -webkit-transform:scale(1);
+        transform:scale(1);
+        opacity:1
+    }
+}
+@keyframes circleAnimate{
+    0%{
+        -webkit-transform:scale(0);
+        transform:scale(0);
+        opacity:0
+    }
+    to{
+        -webkit-transform:scale(1);
+        transform:scale(1);
+        opacity:1
+    }
+}
+@-webkit-keyframes iconAnimateIn{
+    0%{
+        -webkit-transform:translate(-50%,-50%) scale(0);
+        transform:translate(-50%,-50%) scale(0)
+    }
+    to{
+        -webkit-transform:translate(-50%,-50%) scale(1);
+        transform:translate(-50%,-50%) scale(1)
+    }
+}
+@keyframes iconAnimateIn{
+    0%{
+        -webkit-transform:translate(-50%,-50%) scale(0);
+        transform:translate(-50%,-50%) scale(0)
+    }
+    to{
+        -webkit-transform:translate(-50%,-50%) scale(1);
+        transform:translate(-50%,-50%) scale(1)
+    }
+}
+@-webkit-keyframes crossAnimateIn{
+    0%{
+        -webkit-transform:translate(-50%,-50%) rotate(-90deg) scale(0);
+        transform:translate(-50%,-50%) rotate(-90deg) scale(0)
+    }
+    to{
+        -webkit-transform:translate(-50%,-50%) rotate(90deg) scale(1);
+        transform:translate(-50%,-50%) rotate(90deg) scale(1)
+    }
+}
+@keyframes crossAnimateIn{
+    0%{
+        -webkit-transform:translate(-50%,-50%) rotate(-90deg) scale(0);
+        transform:translate(-50%,-50%) rotate(-90deg) scale(0)
+    }
+    to{
+        -webkit-transform:translate(-50%,-50%) rotate(90deg) scale(1);
+        transform:translate(-50%,-50%) rotate(90deg) scale(1)
+    }
+}
+@-webkit-keyframes iconAnimateOut{
+    0%{
+        -webkit-transform:translate(-50%,-50%) scale(1);
+        transform:translate(-50%,-50%) scale(1)
+    }
+    to{
+        -webkit-transform:translate(-50%,-50%) scale(0);
+        transform:translate(-50%,-50%) scale(0);
+        display:none
+    }
+}
+@keyframes iconAnimateOut{
+    0%{
+        -webkit-transform:translate(-50%,-50%) scale(1);
+        transform:translate(-50%,-50%) scale(1)
+    }
+    to{
+        -webkit-transform:translate(-50%,-50%) scale(0);
+        transform:translate(-50%,-50%) scale(0);
+        display:none
+    }
+}
+    </style>
+    <a href="https://discordapp.com/invite/cqyc7U?utm_source=Discord%20Widget&utm_medium=Connect">
+        <div _ngcontent-c0="" class="discord" id="circle">
+          <div _ngcontent-c0="" class="discord--box ng-trigger ng-trigger-discord" id="discord_thing" style="transform: scale(0);">
+            <iframe _ngcontent-c0="" class="ng-tns-c0-0" allowtransparency="true" frameborder="0" height="500" src="https://discordapp.com/widget?id=304313295165325323&amp;theme=dark" width="350"></iframe>
+          </div>
+          <div _ngcontent-c0="" class="discord--icon" id="icon">
+            <div _ngcontent-c0="" class="discord--icon__logo" id="discord"></div>
+          </div>
+          <div _ngcontent-c0="" class="discord--cross closed" id="cross">
+            <div _ngcontent-c0="" class="discord--cross__icon" id="cross-icon"></div>
+          </div>
+        </div>
+    </a>
+    <script type="text/javascript">
+        $("#discord_thing").click(function() {
+            alert($("#discord_thing").css("transform"));
+        });
     </script>
 </body>
 </html>
