--- a/event-info.html
+++ b/event-info.html
@@ -200,12 +200,32 @@
                     <td>Hacking Starts</td>
                 </tr>
                 <tr>
+                    <td>12:00</td>
+                    <td>Team Building (Liam Sorta)</td>
+                </tr>
+                <tr>
                     <td>13:00</td>
                     <td>Lunch</td>
                 </tr>
                 <tr>
-                    <td>14:00 to 18:00</td>
-                    <td>Workshops</td>
+                    <td>14:00</td>
+                    <td>Python Web Apps for Hackathons (Bede Kelly)</td>
+                </tr>
+                <tr>
+                    <td>15:00</td>
+                    <td>Nexmo voice APIs (Sam Machin)</td>
+                </tr>
+                <tr>
+                    <td>16:00</td>
+                    <td>Python Generators (Giedrius Kudelis)</td>
+                </tr>
+                <tr>
+                    <td>17:00</td>
+                    <td>WebVR (Arora)</td>
+                </tr>
+                <tr>
+                    <td>18:00</td>
+                    <td>Creatinv cross-platform AR applications (Liam Sorta)</td>
                 </tr>
                 <tr>
                     <td>19:00</td>
