--- a/event-info.html
+++ b/event-info.html
@@ -107,7 +107,7 @@
                 </div>
                 <div class="sponsor-item-right">
                     <div class="sponsor-item-right-content">
-                        <h3></h3>
+                        <h3>Nexmo Challenge</h3>
                         <p>Best use of Nexmo APIs</p>
                     </div>
                 </div>
@@ -118,7 +118,7 @@
                 </div>
                 <div class="sponsor-item-right">
                     <div class="sponsor-item-right-content">
-                        <h3></h3>
+                        <h3>Capgemini Challenge</h3>
                         <p>Best use of AI technology</p>
                     </div>
                 </div>
@@ -129,7 +129,7 @@
                 </div>
                 <div class="sponsor-item-right">
                     <div class="sponsor-item-right-content">
-                        <h3></h3>
+                        <h3>Unity Challenge</h3>
                         <p>Build something cool with Unity</p>
                     </div>
                 </div>
@@ -140,7 +140,7 @@
                 </div>
                 <div class="sponsor-item-right">
                     <div class="sponsor-item-right-content">
-                        <h3></h3>
+                        <h3>Robert Walters Challenge</h3>
                         <p>Best hack to make buisiness run smoothly</p>
                     </div>
                 </div>
@@ -151,7 +151,7 @@
                 </div>
                 <div class="sponsor-item-right">
                     <div class="sponsor-item-right-content">
-                        <h3></h3>
+                        <h3>BCS Challenge</h3>
                         <p>Hack that does the most good for society</p>
                     </div>
                 </div>
