--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <a href="#event-info">About Us</a>
             <a href="#sponsors">Sponsors</a>
             <a href="#team">Team</a>
-            <a href="https://www.eventbrite.co.uk/e/hackthemidlands-30-tickets-47296240328">Get Tickets</a>
+            <a href="/">Get Tickets</a>
             <a href="event-info.html">Event Information</a>
         </div>
       </div>
@@ -62,7 +62,7 @@
                             <a href="#event-info">About Us</a>
                             <a href="#sponsors">Sponsors</a>
                             <a href="#team">Team</a>
-                            <a href="https://www.eventbrite.co.uk/e/hackthemidlands-30-tickets-47296240328">Get Tickets</a>
+                            <a href=/>Get Tickets</a>
                             <a href="event-info.html">Event Information</a>
                             <div class="nav-mobile"></div>
                         </div>
@@ -70,7 +70,7 @@
                 </div>
             <div class="header-content">
                 <h1>Are you ready for <br/><span class="header-title"><span>Hack</span><span>The</span><span>Midlands? </span></span></h1>
-                <h3>3<sup>rd</sup> - 4<sup>th</sup> November</h3>
+                <h3>26<sup>th</sup> - 27<sup>th</sup> October</h3>
                 <a href="https://www.eventbrite.co.uk/e/hackthemidlands-30-tickets-47296240328"><button id="apply-button">Get Tickets</button></a>
                 <a href="sponsorship.pdf"><button id="sponsor-button">Sponsor Us</button></a>
                 <a href="https://www.youtube.com/watch?v=bakpTO7weKk"><h3 style="font-size: 15px; padding-top: 10px; font-weight: 500">Watch The Video!</h3></a>
