--- a/index.html
+++ b/index.html
@@ -61,12 +61,15 @@
                     </div>
                     <div class="nav-right">
                         <div class="nav-right-content">
-                            <a href="#event-info">About Us</a>
-                            <a href="#sponsors">Sponsors</a>
-                            <a href="#team">Team</a>
-                            <a href=/>Get Tickets</a>
-                            <a href="event-info.html">Event Information</a>
-                            <div class="nav-mobile"></div>
+                            <div class="links">
+                                <a href="#event-info">About Us</a>
+                                <a href="#sponsors">Sponsors</a>
+                                <a href="#team">Team</a>
+                                <a href=/>Get Tickets</a>
+                                <a href="event-info.html">Event Information</a>
+                                <div class="nav-mobile"></div>
+                            </div>
+                            <a class="trust-badge" style="float:right;" href="https://mlh.io/seasons/eu-2019/events?utm_source=eu-hackathon&utm_medium=TrustBadge&utm_campaign=2019-season&utm_content=white" target="_blank"><img src="https://s3.amazonaws.com/logged-assets/trust-badge/2019/mlh-trust-badge-2019-white.svg" alt="Major League Hacking 2019 Hackathon Season" style="width:100px"></a>
                         </div>
                     </div>
                 </div>
@@ -79,7 +82,8 @@
             </div>
             <div class="social-links-header">
                 <a target="_blank" href="https://www.facebook.com/hackthemidlands/"><img id="facebook" src="images/facebook.svg"/></a>
-                <a target="_blank" href="https://www.eventbrite.co.uk/e/hackthemidlands-30-tickets-47296240328"><img src="images/event-brite.png"/></a>
+                <a target="_blank" href="https://twitter.com/hackthemidlands/"><img id="twitter" src="images/twitter.svg"/></a>
+                <a target="_blank" href=""><img src="images/event-brite.png"/></a>
             </div>
         </section>
         <section id="event-countdown">
@@ -117,8 +121,8 @@
                 <hr/>
                 <div class="faq-post">
                     <h2>What is <span class="span-capital">HackThe<span>Midlands?</span></span></h2>
-                    <p>  HackTheMidlands is a 24-hour, inclusive hackathon being hosted in Birmingham on the 3rd-4th November 2018 at Millennium Point. </p>
-                    <p> Over the 24 hours, people aged 14+ of all skill levels <b>(you don't have to be a professional or a student! Just be lovely, passionate and interested in tech!)</b> will come together to share ideas, and create new and awesome projects! (Not sure what a hackathon is? MLH have a great explanation <a href="https://mlh.io/college-administrator-hackathon-guide">here</a>). </p>
+                    <p>HackTheMidlands is a 24-hour, inclusive hackathon being hosted in Birmingham on the 26th - 27th October at Millennium Point.</p>
+                    <p>Over the 24 hours, people aged 14+ of all skill levels <b>(you don't have to be a professional or a student! Just be lovely, passionate and interested in tech!)</b> will come together to share ideas, and create new and awesome projects! (Not sure what a hackathon is? MLH have a great explanation <a href="https://mlh.io/college-administrator-hackathon-guide">here</a>). </p>
                 </div>
                 <div class="faq-post">
                     <h2>Can Under 18s Attend?</span></h2>
@@ -134,8 +138,9 @@
                     <p>We will be following the Hack Code of Conduct, which can be found <a href="http://hackcodeofconduct.org/">here</a>.</p>
                 </div>
                 <h3>Join Us!</h3>
-                <p>Get your tickets now for HackTheMidlands and be guaranteed a spot in this year's hackathon!</p>
-                <a href="https://www.eventbrite.co.uk/e/hackthemidlands-30-tickets-47296240328"><button>Get Tickets</button></a>
+                <p>Tickets will be open for HackTheMidlands 4 soon!</p>
+                <!-- <p>Get your tickets now for HackTheMidlands and be guaranteed a spot in this year's hackathon!</p> -->
+                <!-- <a href="https://www.eventbrite.co.uk/e/hackthemidlands-30-tickets-47296240328"><button>Get Tickets</button></a> -->
             </div>
             <div class="google-maps">
                 <div id="faq-slit-bottom"></div>
@@ -341,6 +346,5 @@
             }
             myVideo.play();
         </script>
-    <a id="mlh-trust-badge" style="display:block;max-width:100px;min-width:60px;position:fixed;right:50px;top:0;width:10%;z-index:10000" href="https://mlh.io/seasons/eu-2019/events?utm_source=eu-hackathon&utm_medium=TrustBadge&utm_campaign=2019-season&utm_content=white" target="_blank"><img src="https://s3.amazonaws.com/logged-assets/trust-badge/2019/mlh-trust-badge-2019-white.svg" alt="Major League Hacking 2019 Hackathon Season" style="width:100%"></a>
     </body>
 </html>
