Add twitter links to page bottom

--- a/index.html
+++ b/index.html
@@ -296,8 +296,9 @@
                 <h3>Made with <img src="images/heart.svg"> by <a href="http://www.alexwiley.co.uk">alex wiley</a></h3>
             </div>
             <div class="social-links" id="footer-social">
-                <a target="_blank" href="https://www.facebook.com/hackthemidlands"><img src="images/facebook.svg"/></a>
                 <a target="_blank" href="http://eepurl.com/cIZiFf"><img src="images/event-brite.png"/></a>
+                <a target="_blank" href="https://twitter.com/hackthemidlands/"><img id="twitter" src="images/twitter.svg"/></a>
+                <a target="_blank" href="https://www.facebook.com/hackthemidlands"><img src="images/facebook.svg"/></a>
             </div>
         </footer>
 
