Remove old ticket links

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <a href="#event-info">About Us</a>
             <a href="#sponsors">Sponsors</a>
             <a href="#team">Team</a>
-            <a href="/">Get Tickets</a>
+            <a href="#">Get Tickets</a>
             <a href="event-info.html">Event Information</a>
         </div>
       </div>
@@ -65,7 +65,7 @@
                                 <a href="#event-info">About Us</a>
                                 <a href="#sponsors">Sponsors</a>
                                 <a href="#team">Team</a>
-                                <a href=/>Get Tickets</a>
+                                <a href="#">Get Tickets</a>
                                 <a href="event-info.html">Event Information</a>
                                 <div class="nav-mobile"></div>
                             </div>
@@ -76,7 +76,7 @@
             <div class="header-content">
                 <h1>Are you ready for <br/><span class="header-title"><span>Hack</span><span>The</span><span>Midlands? </span></span></h1>
                 <h3>26<sup>th</sup> - 27<sup>th</sup> October</h3>
-                <a href="https://www.eventbrite.co.uk/e/hackthemidlands-30-tickets-47296240328"><button id="apply-button">Get Tickets</button></a>
+                <a href="#"><button id="apply-button">Get Tickets</button></a>
                 <a href="sponsorship.pdf"><button id="sponsor-button">Sponsor Us</button></a>
                 <a href="https://www.youtube.com/watch?v=bakpTO7weKk"><h3 style="font-size: 15px; padding-top: 10px; font-weight: 500">Watch The Video!</h3></a>
             </div>
@@ -140,7 +140,7 @@
                 <h3>Join Us!</h3>
                 <p>Tickets will be open for HackTheMidlands 4 soon!</p>
                 <!-- <p>Get your tickets now for HackTheMidlands and be guaranteed a spot in this year's hackathon!</p> -->
-                <!-- <a href="https://www.eventbrite.co.uk/e/hackthemidlands-30-tickets-47296240328"><button>Get Tickets</button></a> -->
+                <!-- <a href="#"><button>Get Tickets</button></a> -->
             </div>
             <div class="google-maps">
                 <div id="faq-slit-bottom"></div>
