Remove old events and challenges

--- a/event-info.html
+++ b/event-info.html
@@ -82,13 +82,17 @@
     </section>
 
     <!--Sponsor Challenges-->
-     
     <section id="sponsor-challenges">
         <div class="container">
             <h2>Sponsor Challenges</h2>
             <hr/>
             <div class="sponsors-challenges">
-                <div class="sponsor-item" id="majestic">
+                <p>
+                    None here yet!
+                    Become a sponsor to have your challenge here!
+                </p>
+                <!--
+                <div class="sponsor-item">
                     <div class="sponsor-item-left">
                         <img src="images/sponsors/majestic.png" alt="Majestic"/>
                     </div>
@@ -100,66 +104,15 @@
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class="sponsor-item" id="majestic">
-                <div class="sponsor-item-left">
-                    <img src="images/sponsors/nexmo.png" alt="Nexmo"/>
-                </div>
-                <div class="sponsor-item-right">
-                    <div class="sponsor-item-right-content">
-                        <h3>Nexmo Challenge</h3>
-                        <p>Best use of Nexmo APIs</p>
-                    </div>
-                </div>
-            </div>
-            <div class="sponsor-item" id="majestic">
-                <div class="sponsor-item-left">
-                    <img src="images/sponsors/capgemini.png" alt="Capgemini"/>
-                </div>
-                <div class="sponsor-item-right">
-                    <div class="sponsor-item-right-content">
-                        <h3>Capgemini Challenge</h3>
-                        <p>Best use of AI technology</p>
-                    </div>
-                </div>
-            </div>
-            <div class="sponsor-item" id="majestic">
-                <div class="sponsor-item-left">
-                    <img src="images/sponsors/unity.png" alt="Unity"/>
-                </div>
-                <div class="sponsor-item-right">
-                    <div class="sponsor-item-right-content">
-                        <h3>Unity Challenge</h3>
-                        <p>Build something cool with Unity</p>
-                    </div>
-                </div>
-            </div>
-            <div class="sponsor-item" id="majestic">
-                <div class="sponsor-item-left">
-                    <img src="images/sponsors/robert-walters.png" alt="robert-walters"/>
-                </div>
-                <div class="sponsor-item-right">
-                    <div class="sponsor-item-right-content">
-                        <h3>Robert Walters Challenge</h3>
-                        <p>Best hack to make buisiness run smoothly</p>
-                    </div>
-                </div>
-            </div>
-            <div class="sponsor-item" id="majestic">
-                <div class="sponsor-item-left">
-                    <img src="images/sponsors/bcs.png" alt="bcs"/>
-                </div>
-                <div class="sponsor-item-right">
-                    <div class="sponsor-item-right-content">
-                        <h3>BCS Challenge</h3>
-                        <p>Hack that does the most good for society</p>
-                    </div>
-                </div>
+                -->
             </div>
         </div>
     </section>
 
     <style>
+    p {
+        color: #dddddd;
+    }
     table {
         font-family: ingra, sans-serif;
         color: #dddddd;
@@ -199,46 +152,6 @@
                     <td>12:00</td>
                     <td>Hacking Starts</td>
                 </tr>
-                <tr>
-                    <td>12:00</td>
-                    <td>Team Building (Liam Sorta)</td>
-                </tr>
-                <tr>
-                    <td>13:00</td>
-                    <td>Lunch</td>
-                </tr>
-                <tr>
-                    <td>14:00</td>
-                    <td>Python Web Apps for Hackathons (Bede Kelly)</td>
-                </tr>
-                <tr>
-                    <td>15:00</td>
-                    <td>Nexmo voice APIs (Sam Machin)</td>
-                </tr>
-                <tr>
-                    <td>16:00</td>
-                    <td>Python Generators (Giedrius Kudelis)</td>
-                </tr>
-                <tr>
-                    <td>17:00</td>
-                    <td>WebVR (Arora)</td>
-                </tr>
-                <tr>
-                    <td>18:00</td>
-                    <td>Creatinv cross-platform AR applications (Liam Sorta)</td>
-                </tr>
-                <tr>
-                    <td>19:00</td>
-                    <td>Dinner</td>
-                </tr>
-                <tr>
-                    <td>20:00</td>
-                    <td>Code in the Dark</td>
-                </tr>
-                <tr>
-                    <td>22:00</td>
-                    <td>Werewolf</td>
-                </tr>
             </table>
             <h3>Sunday</h3>
             <div class="timetable" id="timetable2"></div>
@@ -251,10 +164,6 @@
                 <tr>
                     <td>00:00</td>
                     <td>Midnight Snack</td>
-                </tr>
-                <tr>
-                    <td>08:00</td>
-                    <td>Breakfast</td>
                 </tr>
                 <tr>
                     <td>12:00</td>
