--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
                                 <a href="#team">Team</a>
                                 <a href="#">Get Tickets</a>
                                 <a href="event-info.html">Event Information</a>
-                                <div class="nav-mobile"></div>
                             </div>
-                            <a class="trust-badge" style="float:right;" href="https://mlh.io/seasons/eu-2019/events?utm_source=eu-hackathon&utm_medium=TrustBadge&utm_campaign=2019-season&utm_content=white" target="_blank"><img src="https://s3.amazonaws.com/logged-assets/trust-badge/2019/mlh-trust-badge-2019-white.svg" alt="Major League Hacking 2019 Hackathon Season" style="width:100px"></a>
+                            <div class="nav-mobile"></div>
+                            <a id="mlh-badge" class="badge" href="https://mlh.io/seasons/eu-2019/events?utm_source=eu-hackathon&utm_medium=TrustBadge&utm_campaign=2019-season&utm_content=white" target="_blank"><img src="https://s3.amazonaws.com/logged-assets/trust-badge/2019/mlh-trust-badge-2019-white.svg" alt="Major League Hacking 2019 Hackathon Season"></a>
                         </div>
                     </div>
                 </div>
