--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <a href="#event-info">About Us</a>
             <a href="#sponsors">Sponsors</a>
             <a href="#team">Team</a>
-            <a href="#">Get Tickets</a>
+            <a href="https://www.eventbrite.co.uk/e/hackthemidlands-40-tickets-62655912521">Get Tickets</a>
             <a href="event-info.html">Event Information</a>
         </div>
       </div>
@@ -65,7 +65,7 @@
                                 <a href="#event-info">About Us</a>
                                 <a href="#sponsors">Sponsors</a>
                                 <a href="#team">Team</a>
-                                <a href="#">Get Tickets</a>
+                                <a href="https://www.eventbrite.co.uk/e/hackthemidlands-40-tickets-62655912521">Get Tickets</a>
                                 <a href="event-info.html">Event Information</a>
                             </div>
                             <div class="nav-mobile"></div>
