Update ticket url everywhere

--- a/index.html
+++ b/index.html
@@ -138,9 +138,8 @@
                     <p>We will be following the Hack Code of Conduct, which can be found <a href="http://hackcodeofconduct.org/">here</a>.</p>
                 </div>
                 <h3>Join Us!</h3>
-                <p>Tickets will be open for HackTheMidlands 4 soon!</p>
-                <!-- <p>Get your tickets now for HackTheMidlands and be guaranteed a spot in this year's hackathon!</p> -->
-                <!-- <a href="#"><button>Get Tickets</button></a> -->
+                <p>Get your tickets now for HackTheMidlands and be guaranteed a spot in this year's hackathon!</p>
+                <a href="https://www.eventbrite.co.uk/e/hackthemidlands-40-tickets-62655912521"><button>Get Tickets</button></a>
             </div>
             <div class="google-maps">
                 <div id="faq-slit-bottom"></div>
@@ -251,7 +250,7 @@
                 <h3>Made with <img src="images/heart.svg"> by <a href="http://www.alexwiley.co.uk">alex wiley</a></h3>
             </div>
             <div class="social-links" id="footer-social">
-                <a target="_blank" href="http://eepurl.com/cIZiFf"><img src="images/event-brite.png"/></a>
+                <a target="_blank" href="https://www.eventbrite.co.uk/e/hackthemidlands-40-tickets-62655912521"><img src="images/event-brite.png"/></a>
                 <a target="_blank" href="https://twitter.com/hackthemidlands/"><img id="twitter" src="images/twitter.svg"/></a>
                 <a target="_blank" href="https://www.facebook.com/hackthemidlands"><img src="images/facebook.svg"/></a>
             </div>
