Fix broken links

--- a/index.html
+++ b/index.html
@@ -76,14 +76,14 @@
             <div class="header-content">
                 <h1>Are you ready for <br/><span class="header-title"><span>Hack</span><span>The</span><span>Midlands? </span></span></h1>
                 <h3>26<sup>th</sup> - 27<sup>th</sup> October</h3>
-                <a href="#"><button id="apply-button">Get Tickets</button></a>
+                <a href="https://www.eventbrite.co.uk/e/hackthemidlands-40-tickets-62655912521"><button id="apply-button">Get Tickets</button></a>
                 <a href="sponsorship.pdf"><button id="sponsor-button">Sponsor Us</button></a>
                 <a href="https://www.youtube.com/watch?v=bakpTO7weKk"><h3 style="font-size: 15px; padding-top: 10px; font-weight: 500">Watch The Video!</h3></a>
             </div>
             <div class="social-links-header">
                 <a target="_blank" href="https://www.facebook.com/hackthemidlands/"><img id="facebook" src="images/facebook.svg"/></a>
                 <a target="_blank" href="https://twitter.com/hackthemidlands/"><img id="twitter" src="images/twitter.svg"/></a>
-                <a target="_blank" href=""><img src="images/event-brite.png"/></a>
+                <a target="_blank" href="https://www.eventbrite.co.uk/e/hackthemidlands-40-tickets-62655912521"><img src="images/event-brite.png"/></a>
             </div>
         </section>
         <section id="event-countdown">
@@ -128,10 +128,10 @@
                     <h2>Can Under 18s Attend?</span></h2>
                     <p><b>YES!</b></p>
                     <p> As the event is being run with the intent of supporting students aged 14 and over we have taken a number of measures to ensure the safety of our participants.</p>
-                    <p> All attendees under the age of 18 will require a consent form signed by their parents to be granted access to the event. A copy of this form can be found <a href="HTM Consent Form.docx">here</a>.</p>
-                    <p> You will also be required to bring along a completed medical form, which can be found <a href="HTM Medical Form Paper.docx">here</a>.</p>
+                    <p> All attendees under the age of 18 will require a consent form signed by their parents to be granted access to the event. A copy of this form can be found <a href="/docs/safeguarding/HTM Consent Form.docx">here</a>.</p>
+                    <p> You will also be required to bring along a completed medical form, which can be found <a href="/docs/medical/HTM Medical Form Paper.docx">here</a>.</p>
                     <p> All attendees will be supervised by DBS-checked adults at all times and are signed in and out of the venue accordingly. </p>
-                    <p> You can find our child protection policy <a href="HTM Child protection.pdf">here</a>.</p>
+                    <p> You can find our child protection policy <a href="/docs/safeguarding/HTM Child protection.pdf">here</a>.</p>
                 </div>
                 <div class="faq-post">
                     <h3>Code of Conduct</h3>
