Improve css for team

--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                 </div>
                 <div class="team-grid-container">
                     <div class="team-grid team-member">
-                        <div class="team-member__picture" id="team-tom"></div>
+                        <img class="team-member__picture" src="/images/team/tom.jpg">
                         <div class="team-member__text">
                             <div class="team-member__text__content">
                                 <h3>Tom Goodman</h3>
@@ -199,7 +199,7 @@
                         </div>
                     </div>
                     <div class="team-grid team-member">
-                        <div class="team-member__picture" id="team-liam"></div>
+                        <img class="team-member__picture" src="/images/team/liam.jpg">
                         <div class="team-member__text">
                             <div class="team-member__text__content">
                                 <h3>Liam Sorta</h3>
@@ -208,7 +208,7 @@
                         </div>
                     </div>
                     <div class="team-grid team-member">
-                        <div class="team-member__picture" id="team-cat"></div>
+                        <img class="team-member__picture" src="/images/team/cat.jpg">
                         <div class="team-member__text">
                             <div class="team-member__text__content">
                                 <h3>Cat Dunicliff</h3>
@@ -216,8 +216,8 @@
                             </div>
                         </div>
                     </div>
-			                    <div class="team-grid team-member">
-                        <div class="team-member__picture" id="team-helena"></div>
+                    <div class="team-grid team-member">
+                        <img class="team-member__picture" src="/images/team/helena.jpg">
                         <div class="team-member__text">
                             <div class="team-member__text__content">
                                 <h3>Helena Bower</h3>
@@ -225,8 +225,8 @@
                             </div>
                         </div>
                     </div>
-			                    <div class="team-grid team-member">
-                        <div class="team-member__picture" id="team-hugh"></div>
+                    <div class="team-grid team-member">
+                        <img class="team-member__picture" src="/images/team/hugh.jpg">
                         <div class="team-member__text">
                             <div class="team-member__text__content">
                                 <h3>Hugh Wells</h3>
