--- a/index.html
+++ b/index.html
@@ -57,7 +57,6 @@
             <div class="navigation">
                     <div class="nav-left">
                         <img src="./images/htmlogo.png"/>
-                        <!-- <h1>HTM</h1> -->
                     </div>
                     <div class="nav-right">
                         <div class="nav-right-content">
@@ -70,7 +69,7 @@
                             </div>
                             <div class="nav-mobile"></div>
                             <!--a id="mlh-badge" class="badge" href="https://mlh.io/seasons/eu-2019/events?utm_source=eu-hackathon&utm_medium=TrustBadge&utm_campaign=2019-season&utm_content=white" target="_blank"><img src="https://s3.amazonaws.com/logged-assets/trust-badge/2019/mlh-trust-badge-2019-white.svg" alt="Major League Hacking 2019 Hackathon Season"></a> -->
-                            <a id="mlh-badge" style="display:block;max-width:100px;min-width:60px;position:fixed;right:50px;top:0;width:10%;z-index:10000" href="https://mlh.io/seasons/na-2020/events?utm_source=na-hackathon&utm_medium=TrustBadge&utm_campaign=2020-season&utm_content=white" target="_blank"><img src="https://s3.amazonaws.com/logged-assets/trust-badge/2020/mlh-trust-badge-2020-white.svg" alt="Major League Hacking 2020 Hackathon Season" style="width:100%"></a>
+                            <a id="mlh-badge" class="badge" href="https://mlh.io/seasons/na-2020/events?utm_source=na-hackathon&utm_medium=TrustBadge&utm_campaign=2020-season&utm_content=white" target="_blank"><img src="https://s3.amazonaws.com/logged-assets/trust-badge/2020/mlh-trust-badge-2020-white.svg" alt="Major League Hacking 2020 Hackathon Season"></a>
 		        </div>
                     </div>
                 </div>
@@ -91,10 +90,6 @@
             <div class="container">
                 <img src="./images/confetti.png"/>
                 <h3>HackTheMidlands <br/><span>Will start in:</span></h3>
-                <!--<div class="countdown">-->
-                    <!--<div id="countdown"></div>-->
-                    <!--<h2>Days Hours Minutes Seconds</h2>-->
-                <!--</div>-->
                 <div id="countdown">
                     <div>
                         <span class="days"></span>
