--- a/index.html
+++ b/index.html
@@ -124,10 +124,10 @@
                     <h2>Can Under 18s Attend?</span></h2>
                     <p><b>YES!</b></p>
                     <p> As the event is being run with the intent of supporting students aged 14 and over we have taken a number of measures to ensure the safety of our participants.</p>
-                    <p> All attendees under the age of 18 will require a consent form signed by their parents to be granted access to the event. A copy of this form can be found <a href="/docs/safeguarding/HTM Consent Form.docx">here</a>.</p>
-                    <p> You will also be required to bring along a completed medical form, which can be found <a href="/docs/medical/HTM Medical Form Paper.docx">here</a>.</p>
+                    <p> All attendees under the age of 18 will require a consent form signed by their parents to be granted access to the event. A copy of this form can be found <a href="/docs/safeguarding/ConsentForm.pdf">here</a>.</p>
+                    <p> You will also be required to bring along a completed medical form, which can be found <a href="/docs/medical/MedicalForm.pdf">here</a>.</p>
                     <p> All attendees will be supervised by DBS-checked adults at all times and are signed in and out of the venue accordingly. </p>
-                    <p> You can find our child protection policy <a href="/docs/safeguarding/HTM Child protection.pdf">here</a>.</p>
+                    <p> You can find out more about our safeguarding <a href="/safeguarding">here</a>.</p>
                 </div>
                 <div class="faq-post">
                     <h3>Code of Conduct</h3>
