Fix some broken links

--- a/safeguarding/index.html
+++ b/safeguarding/index.html
@@ -168,7 +168,7 @@
                     </li>
                 </ul>
                 <p>The above information has been shared and confirmed with the Birmingham Local Area Designated Safeguarding Officer.</p>
-                <p>Our Child Protection Policy can be found <a href=https://hackthemidlands.com/docs/safeguarding/ChildProtectionPolicy.pdf</p>
+                <p>Our Child Protection Policy can be found <a href=https://hackthemidlands.com/docs/safeguarding/ChildProtectionPolicy.pdf>here</a></p>
         </div>
     </section>
 
@@ -233,6 +233,12 @@
     -webkit-animation-delay:2s;
     animation-delay:2s
 }
+a {
+    color: white;
+    text-decoration: underline;
+    font-weight: bold;
+}
+
 .master--no-content[_ngcontent-c0] h3[_ngcontent-c0]{
     font-weight:500;
     font-size:2rem;
